[package]
name = "t-o"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-opentelemetry = "0.22"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
tokio = "1.44"
tracing = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt"] }

[profile.release]
debug = true
